syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.ucu.proto";

package helloworld;

service ClusterNode {
    rpc RequestVote (VoteRequest) returns (VoteResponse) {}
    rpc AppendEntries (AppendRequest) returns (AppendResponse){}
}


message VoteRequest {
    int64 term = 1;
    int32 candidateId = 2;
    int32 lastLogIndex = 3;
    int64 lastLogTerm = 4;

}

message VoteResponse {
    int64 term = 1;
    bool voteGranted = 2;
}

message AppendRequest{
    int64 term = 1;
    int32 leaderId = 2;
    int32 prevLogIndex = 3;
    int64 prevLogTerm = 4;
    int32 leaderCommit = 5;
    repeated LogEntry entries = 6;


}

message LogEntry {
    uint64 term=2;
    string command=3;
    bytes data=4;
}

message AppendResponse{
    int64 term = 1;
    bool success = 2;

}